Hot Fix - Logo Issue

--- a/evd/web/templates/base.html
+++ b/evd/web/templates/base.html
@@ -66,7 +66,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="/static/images/evidyalogo.png">
 
-    <title>eVidyaloka</title>
+    <title>Serve Beta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css_new/bootstrapv3.3.6.min.css" rel="stylesheet">
@@ -1001,17 +1001,15 @@ font-size:18px;
 
                 <div class="col-sm-3" style="float:right;">
                     <a class="navbar-brand scroll" href="/">
-<<<<<<< HEAD
-                        <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
-                        <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute">
-=======
+
+                        <!--<img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
+                        <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute">-->
                         {% if user|partnerLogo %}
                         <img class="logo_img_css1" src="/{{ user|partnerLogo }}" alt="" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute"/>
                         {% else  %}
                         <img class="logo_img_css" src="/static/images/evidyalogo.jpg" alt="evidyaloka logo" width="55px" height="51px" style="margin-top:-14px;border-radius:100%;display:inline;position:absolute"/>
                         <img class="logo_img_css1" src="/static/images/evidyaban_1000x250.png" alt="evidyaloka banner" height="75px" class="banner_large" width="275px" style="margin-left:50px;margin-top:-20px;float:left;display:inline;position:absolute"/  >
                         {% endif %}
->>>>>>> b7b59065109a520101133631d8822d503fdc091d
                     </a>
                 </div>
 
