reference link fix

--- a/evd/partner/templates/my_users.html
+++ b/evd/partner/templates/my_users.html
@@ -369,7 +369,7 @@ else {
                     <p><button class="btn btn-sm" onclick='$("#id_vol_resource_mobil").show()' style="margin-bottom:7px" >Copy Link</button> </p>
                 </div> -->
                 <div id="id_vol_resource_mobil" class="col-sm-10 col-md-10 col-lg-10" style="border: 1px solid #a0b3b0;border-radius: 5px;margin-top: -4px;">
-                    <p style="padding: 5px 16px 0px 0px;text-align:center;"> <span id="id_url_text">https://www.evidyaloka.org/volunteer/p/{{partner.id}} </span><i class="fa fa-clipboard fa-2x pull-right copyhover" onclick="copyurl()" title="Copy to Clipboard"></i></p>
+                    <p style="padding: 5px 16px 0px 0px;text-align:center;"> <span id="id_url_text">https://serve.evidyaloka.org/volunteer/p/{{partner.id}} </span><i class="fa fa-clipboard fa-2x pull-right copyhover" onclick="copyurl()" title="Copy to Clipboard"></i></p>
                 </div>
 
             </div>
