Grades change while adding schools

--- a/evd/partner/templates/school_onboarding_stage1.html
+++ b/evd/partner/templates/school_onboarding_stage1.html
@@ -228,16 +228,16 @@ section h3 {
                                                 <div class="row">
                                                     <label class="control-label col-lg-4 col-sm-12 col-xs-12" style="margin-left:-5pt; font-weight: normal;">Grades Available in the School</label>
                                                     <div class="col-lg-2 col-sm-6 col-xs-6">
-                                                        <input class='y' type="checkbox" id="grade5" value="5" name="grade5"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;5th
+                                                        <input class='y' type="checkbox" id="grade5" value="Primary" name="grade5"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Primary
                                                     </div>
                                                     <div class="col-lg-2 col-sm-6 col-xs-6">
-                                                        <input class='y' type="checkbox" id="grade6" value="6"  name="grade6" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;6th
+                                                        <input class='y' type="checkbox" id="grade6" value="Upper Primary"  name="grade6" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Upper Primary
                                                     </div>
                                                     <div class="col-lg-2 col-sm-6 col-xs-6">
-                                                        <input class='y' type="checkbox" id="grade7" value="7" name="grade7" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7th
+                                                        <input class='y' type="checkbox" id="grade7" value="High School" name="grade7" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;High School
                                                     </div>
                                                     <div class="col-lg-2 col-sm-6 col-xs-6">
-                                                        <input class='y' type="checkbox" id="grade8" value="8" name="grade8" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;8th
+                                                        <input class='y' type="checkbox" id="grade8" value="All" name="grade8" > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All
                                                     </div>
                                                 </div><br>
                                             </div>
