--- a/evd/webext/templates/demand_otherskill_new.html
+++ b/evd/webext/templates/demand_otherskill_new.html
@@ -285,9 +285,13 @@ word-wrap: break-word;
 	   $("#login-trigger2").attr('data-value','support');
    }
    
+
+   localStorage.setItem("user", $('#user').val());
+   
    </script>
      <script type="text/javascript" src="/static/js/underscore-min.js"></script>
      <script type="text/javascript" src="/static/js/demandViewForOtherSkill.js"></script>
      <script src="https://cdn.jsdelivr.net/scrollreveal.js/3.1.1/scrollreveal.min.js"></script>
+     <script>document.cookie('key=value; SameSite=None; Secure');</script>
      {% endblock import_scripts %}
 </html>
