--- a/evd/web/templates/task/create_task.html
+++ b/evd/web/templates/task/create_task.html
@@ -58,7 +58,7 @@ color: #23527c; !important;
 
 <div class="container-fluid " style = "margin-top: 20px;">
     <div class="row rowCSS">
-        <form action="/saveTask/" id="formId" method="post" onsubmit="return validateMyForm();">
+        <form action="/saveTask/" id="formId" method="post" enctype="multipart/form-data" onsubmit="return validateMyForm();">
         {% csrf_token %}
         <input type="hidden"  value="{{message}}" name="message" />
         <input type="hidden"  value="{{tabName}}" name="tabName" id="tabNameId" />
@@ -126,6 +126,12 @@ color: #23527c; !important;
                                         CKEDITOR.replace( 'editor1' );
                                         CKEDITOR.config.autoParagraph = false;
                                     </script>
+                                </div>
+                            </div>
+                            <div class="row rowCss">
+                                <div class="adjoined-bottom col-xs-12 col-sm-12 col-md-12">
+                                    <label>Upload file :</label>
+                                    <input type="file" id="attachment" name="attachment">
                                 </div>
                             </div>
                             <div class="row rowCss"><div class="col-md-2 col-sm-6 col-xs-12"></div></div>
